@@ -1,0 +1,1 @@
+INSTALLED_TESTS=1
