@@ -1,21 +1,32 @@
 #!/usr/bin/perl
 use warnings;
 use strict;
-use Test::More 'no_plan';
+use Test::More;
+
+my $installed = $ENV{INSTALLED_TESTS};
 
 ok(! system("rm -rf t/tmp; mkdir t/tmp"));
-ok(! system("make -s ikiwiki.out"));
-ok(! system("make underlay_install DESTDIR=`pwd`/t/tmp/install PREFIX=/usr >/dev/null"));
+
+my @command;
+if ($installed) {
+	@command = qw(env LC_ALL=C ikiwiki);
+}
+else {
+	ok(! system("make -s ikiwiki.out"));
+	ok(! system("make underlay_install DESTDIR=`pwd`/t/tmp/install PREFIX=/usr >/dev/null"));
+	@command = qw(env LC_ALL=C perl -I. ./ikiwiki.out
+		--underlaydir=t/tmp/install/usr/share/ikiwiki/basewiki
+		--set underlaydirbase=t/tmp/install/usr/share/ikiwiki
+		--templatedir=templates);
+}
 
 foreach my $plugin ("", "listdirectives") {
-	ok(! system("LC_ALL=C perl -I. ./ikiwiki.out --rebuild --plugin brokenlinks ".
+	ok(! system(@command, qw(--rebuild --plugin brokenlinks),
 			# always enabled because pages link to it conditionally,
 			# which brokenlinks cannot handle properly
-			"--plugin smiley ".
-			($plugin ? "--plugin $plugin " : "").
-			"--underlaydir=t/tmp/install/usr/share/ikiwiki/basewiki ".
-			"--set underlaydirbase=t/tmp/install/usr/share/ikiwiki ".
-			"--templatedir=templates t/basewiki_brokenlinks t/tmp/out"));
+			qw(--plugin smiley),
+			($plugin ? ("--plugin", $plugin) : ()),
+			qw(t/basewiki_brokenlinks t/tmp/out)));
 	my $result=`grep 'no broken links' t/tmp/out/index.html`;
 	ok(length($result));
 	if (! length $result) {
@@ -27,3 +38,5 @@ foreach my $plugin ("", "listdirectives") {
 	ok(! system("rm -rf t/tmp/out t/basewiki_brokenlinks/.ikiwiki"));
 }
 ok(! system("rm -rf t/tmp"));
+
+done_testing();
