@@ -11,6 +11,10 @@ ikiwiki (3.20150615) UNRELEASED; urgency=medium
   * Modified page.tmpl to to set html lang= and dir= when
     values have been specified for them, which the po plugin does.
 
+  [ Simon McVittie ]
+  * Run autopkgtest tests using autodep8 and the pkg-perl team's
+    infrastructure
+
  -- Simon McVittie <smcv@debian.org>  Mon, 15 Jun 2015 18:13:23 +0100
 
 ikiwiki (3.20150614) unstable; urgency=medium
